--- a/start/templates/start/Instructions.html
+++ b/start/templates/start/Instructions.html
@@ -1,5 +1,4 @@
 {% block title %}
-    Task Description
 {% endblock %}
 
 {% block content %}
@@ -7,61 +6,12 @@
 <div class="card bg-light m-3">
     <div class="card-body">
         
-        <p>
-            In the daycare group at the local school there are six children who love to play with marbles. 
-            Their names are Kim, Luca, Leo, Sasha, Toni, and Nicki. They love to collect marbles. 
-            Each of the children has their own set of 4 special edition marbles that they are supposed to put in boxes when they leave the daycare centre.
-        </p>
-
-        <p>
-            When the children play, the marbles often get lost. Their teacher and an educator discussed how to motivate the children to find their marbles and tidy up the room. They decided to promise each child:
-        </p>
-
-        <ul>
-            <li>a piece of <strong>chocolate</strong> if the child finds all of his/her 4 marbles</li>
-            <li>a piece of <strong>hard candy</strong> if the child finds between 1 and 3 of his/her marbles</li>
-            <li>a <strong>gummy bear</strong> if the child finds none of his/her 4 marbles.</li>
-        </ul>
-
-        <p>
-            A child can only receive one reward. The teacher and the educator have decided that the educator will stay with the children and the teacher will go to the supermarket to buy sweets.
-        </p>
-
-        <p>
-            After cleaning up, the children put the boxes with their marbles on a table. The educator sends a message to the teacher describing how many marbles the children have found, so that the teacher can buy the right amount of sweets. In order not to disappoint the children, it is important to buy all the sweets needed as a reward. However, the teacher should not buy more sweets than necessary.
-        </p>
-
-        <p>
-            In the following, you will take turns to play the role of the educator or teacher. In each round, you will be assigned to either:
-        </p>
-
-        <hr>
-
-        <h5>(1) The Educator (describing):</h5>
-        <p>
-            You will see pictures of the marble boxes that the children have put on the table. This shows you how many marbles each child has found.
-            Your task is to write a message telling the teacher what you see. You do not have to describe every detail. Your description should give enough information for the teacher to know what kind of sweets are needed and what kind of sweets are not needed.
-        </p>
-
-        <h5>(2) The Teacher (buyer):</h5>
-        <p>
-            You are the teacher. You receive a message from the educator at the school telling you how many marbles each child has found.
-            Now you have to decide which sweets are needed. Remember that it is important to buy all the sweets that are needed, but not more than that. You only need to decide on the kind of sweets needed (chocolates, hard candies, gummy bears), not on the number of individual pieces needed (assuming they are sold in larger packs).
-        </p>
-
-        <hr>
-
-        <p>
-            The message you create in your role as educator will be sent to other participants in this experiment, who will then have to buy sweets. So it has to be detailed enough so that other participants can buy just the right sweets and no more. As a teacher (buyer) you will see sentences produced by other participants in the role of an educator doing the same experiment. They are collected from many different participants, so you have to interpret more sentences in the role of teacher (buyer) than you produce in the role of educator.
-        </p>
-
-        <p>
-            Before you start the experiment, there will be some practice rounds where you should practice which sweets are needed depending on how many marbles the children have found.
-        </p>
-
-        <p class="text-center">
-            <strong>Have fun!</strong>
-        </p>
+        <iframe 
+            src="https://docs.google.com/document/d/e/2PACX-1vTg_Hd8hXK-TZS77rC6W_BlY2NtWhQqCLzlgW0LeomoEUdhoDNYPNVOO7Pt6g0-JksykUrgRdtcVL3u/pub?embedded=true"
+            width="100%" 
+            height="800px" 
+            style="border: 1px solid #ccc;">
+        </iframe>
 
     </div>
 </div>
